WB-MRWM2: Add voltage control function and delays (#785)

--- a/templates/config-wb-mrwm2.json.jinja
+++ b/templates/config-wb-mrwm2.json.jinja
@@ -53,6 +53,14 @@
             },
             {% endfor -%}
             {
+                "title": "L1",
+                "id": "g_l1"
+            },
+            {
+                "title": "L2",
+                "id": "g_l2"
+            },
+            {
                 "title": "Outputs",
                 "id": "g_outputs"
             },
@@ -60,7 +68,6 @@
                 "title": "Output Safe State",
                 "id": "gg_outputs_safe_state",
                 "group": "g_outputs"
-                
             },
             {
                 "title": "Outputs group",
@@ -88,12 +95,31 @@
                 "group": "g_safety"
             },
             {
-                "title": "L1",
-                "id": "g_l1"
+                "title": "Protective Functions",
+                "description": "protective_functions_description",
+                "id": "g_voltage_control"
+            },
+            {% for out_num in range(1, OUTPUTS_NUMBER + 1) -%}
+            {
+                "title": "Delays K{{out_num}}",
+                "id": "gg_out{{out_num}}_delay_params",
+                "group": "g_voltage_control"
             },
             {
-                "title": "L2",
-                "id": "g_l2"
+                "title": "Voltage Control K{{out_num}}",
+                "id": "gg_out{{out_num}}_voltage_params",
+                "group": "g_voltage_control"
+            },
+            {% endfor -%}
+            {
+                "title": "Displayed Voltage Control Channels",
+                "id": "gg_voltage_control_channels",
+                "group": "g_voltage_control",
+                "ui_options": {
+                    "wb": {
+                        "disable_title": true
+                    }
+                }
             },
             {
                 "title": "General",
@@ -296,6 +322,9 @@
                 "enum_titles": ["no action", "reset", "set", "toggle"],
                 "condition": "in{{in_num}}_mode==6"
             },
+            {% endfor -%}
+            {% endfor -%}
+            {% for out_num in range(1, OUTPUTS_NUMBER + 1) -%}
             "out{{out_num}}_safe_state": {
                 "title": "Output {{out_num}}",
                 "group": "gg_outputs_safe_state",
@@ -337,7 +366,6 @@
                 ]
             },
             {% endfor -%}
-            {% endfor -%}
             "outputs_restore_state": {
                 "title": "Outputs State After Power On",
                 "description": "outputs_state_after_power_on_description",
@@ -360,6 +388,100 @@
                 "max": 65534,
                 "default": 10
             },
+
+            {% for out_num in range(1, OUTPUTS_NUMBER + 1) -%}
+            "startup_delay_ctrl_dis_{{out_num}}": {
+                "title": "Startup Delay (s)",
+                "description": "startup_delay_ctrl_dis_description",
+                "address": {{1728 + out_num - 1}},
+                "reg_type": "holding",
+                "scale": 0.1,
+                "min": 0,
+                "max": 999,
+                "default": 0,
+                "group": "gg_out{{out_num}}_delay_params",
+                "order": 1,
+                "condition": "is_voltage_control_for_{{out_num}}_enabled!=1"
+            },
+            "startup_delay_ctrl_en_{{out_num}}": {
+                "title": "Startup Delay (s)",
+                "description": "startup_delay_ctrl_en_description",
+                "address": {{1728 + out_num - 1}},
+                "reg_type": "holding",
+                "scale": 0.1,
+                "min": 3,
+                "max": 999,
+                "default": 10,
+                "required": true,
+                "group": "gg_out{{out_num}}_delay_params",
+                "order": 1,
+                "condition": "is_voltage_control_for_{{out_num}}_enabled==1"
+            },
+            "restart_delay_{{out_num}}": {
+                "title": "Restart Delay (s)",
+                "description": "restart_delay_description",
+                "address": {{1736 + out_num - 1}},
+                "reg_type": "holding",
+                "scale": 0.1,
+                "min": 0,
+                "max": 999,
+                "default": 0,
+                "group": "gg_out{{out_num}}_delay_params",
+                "order": 2
+            },
+            "undervoltage_threshold_{{out_num}}": {
+                "title": "Undervoltage Threshold (V)",
+                "description": "undervoltage_description",
+                "address": {{1704 + out_num - 1}},
+                "reg_type": "holding",
+                "scale": 0.01,
+                "min": 120,
+                "max": 220,
+                "default": 207,
+                "group": "gg_out{{out_num}}_voltage_params",
+                "order": 3
+            },
+            "overvoltage_threshold_{{out_num}}": {
+                "title": "Overvoltage Threshold (V)",
+                "description": "overvoltage_description",
+                "address": {{1712 + out_num - 1}},
+                "reg_type": "holding",
+                "scale": 0.01,
+                "min": 230,
+                "max": 277,
+                "default": 253,
+                "group": "gg_out{{out_num}}_voltage_params",
+                "order": 4
+            },
+            "is_voltage_control_for_{{out_num}}_enabled": {
+                "title": "Voltage Protection Trip",
+                "address": {{1696 + out_num - 1}},
+                "reg_type": "holding",
+                "enum": [0, 1],
+                "default": 0,
+                "enum_titles": [
+                    "Disable",
+                    "Enable"
+                ],
+                "group": "gg_out{{out_num}}_voltage_params",
+                "order": 5
+            },
+            "delay_off_{{out_num}}": {
+                "title": "Voltage Dip Duration (s)",
+                "description": "voltage_dip_duration_description",
+                "address": {{1720 + out_num - 1}},
+                "reg_type": "holding",
+                "scale": 0.1,
+                "min": 0.5,
+                "max": 10,
+                "default": 5,
+                "required": true,
+                "group": "gg_out{{out_num}}_voltage_params",
+                "order": 6,
+                "condition": "is_voltage_control_for_{{out_num}}_enabled==1"
+            },
+            {% endfor -%}
+
             "baud_rate": {
                     "title": "Baud rate",
                     "description": "baud_rate_description",
@@ -494,8 +616,15 @@
                 "sporadic": true,
                 "group": "gg_outputs_channels"
             },
+            {
+                "name": "Real State K{{out_num}}",
+                "reg_type": "discrete",
+                "address": {{96 + out_num - 1}},
+                "type": "switch",
+                "group": "gg_outputs_channels"
+            },
             {% endfor -%}
-             {% for out_num in range(1, OUTPUTS_NUMBER + 1) -%}
+            {% for out_num in range(1, OUTPUTS_NUMBER + 1) -%}
             {
                 "name": "Urms L{{out_num}}",
                 "reg_type": "input",
@@ -524,6 +653,48 @@
                 "group": "g_l{{out_num}}"
             },
             {% endfor -%}
+
+            {% for out_num in range(1, OUTPUTS_NUMBER + 1) -%}
+            {
+                "name": "Urms Normal K{{out_num}}",
+                "reg_type": "discrete",
+                "address": {{80 + out_num - 1}},
+                "type": "switch",
+                "group": "gg_voltage_control_channels"
+            },
+            {
+                "name": "Blocking K{{out_num}}",
+                "reg_type": "discrete",
+                "address": {{88 + out_num - 1}},
+                "type": "switch",
+                "group": "gg_voltage_control_channels",
+                "condition": "(startup_delay_ctrl_dis_{{out_num}}>0)||(startup_delay_ctrl_en_{{out_num}}>0)||(restart_delay_{{out_num}}>0)||(is_voltage_control_for_{{out_num}}_enabled==1)"
+            },
+            {
+                "name": "Startup Delay Countdown K{{out_num}}",
+                "reg_type": "input",
+                "address": {{1744 + out_num - 1}},
+                "units": "s",
+                "format": "u16",
+                "scale": 0.1,
+                "sporadic": true,
+                "group": "gg_voltage_control_channels",
+                "condition": "(startup_delay_ctrl_dis_{{out_num}}>0)||(startup_delay_ctrl_en_{{out_num}}>0)"
+            },
+            {
+                "name": "Restart Delay Countdown K{{out_num}}",
+                "reg_type": "input",
+                "address": {{1752 + out_num - 1}},
+                "units": "s",
+                "format": "u16",
+                "scale": 0.1,
+                "sporadic": true,
+                "group": "gg_voltage_control_channels",
+                "condition": "restart_delay_{{out_num}}>0"
+            },
+
+            {% endfor -%}
+
             {
                 "name": "Serial",
                 "reg_type": "input",
@@ -611,7 +782,18 @@
 
                 "lp_hold_time_description": "If press is longer than the specified time then it is long",
                 "secp_waiting_time_description": "If there is no second press during the specified time then press is single. 0 - disables all presses except short and long. Adds a delay to the response to a short press",
-                "debounce_time_description": "For press detection must be 5-10 times less than second press waiting time. Adds a delay to the response to presses. Firmware up to 1.19.0 supports maximum 250 ms"
+                "debounce_time_description": "For press detection must be 5-10 times less than second press waiting time. Adds a delay to the response to presses. Firmware up to 1.19.0 supports maximum 250 ms",
+
+                {% for out_num in range(1, OUTPUTS_NUMBER + 1) -%}
+                "K{{out_num}}": "Command K{{out_num}}",
+                {% endfor -%}
+                "protective_functions_description": "For Protective Functions firmware v1.21.0 or newer is required",
+                "undervoltage_description": "120 to 220, factory default - 207",
+                "overvoltage_description": "230 to 277, factory default - 253",
+                "voltage_dip_duration_description": "0.5 to 10, factory default - 5",
+                "startup_delay_ctrl_dis_description": "0 to 999, factory default - 0",
+                "startup_delay_ctrl_en_description": "3 to 999, factory default - 10",
+                "restart_delay_description": "0 to 999, factory default - 0"
             },
             "ru": {
                 "WB-MRWM2-template-title": "WB-MRWM2 (2-канальный модуль реле с измерением мощности)",
@@ -628,6 +810,8 @@
 
                 "Outputs": "Выходы",
                 "Safety Mode": "Безопасный режим",
+                "Delays": "Задержки включения",
+                "Protective Functions": "Защитные функции",
                 "General": "Общее",
                 "HW Info": "Данные модуля",
                 "Debug": "Диагностика",
@@ -637,8 +821,16 @@
                 "Actions for outputs when the input is closed / opened": "Действия для выходов при замыкании / размыкании входа",
 
                 {% for out_num in range(1, OUTPUTS_NUMBER + 1) -%}
+                "K{{out_num}}": "Команда K{{out_num}}",
+                "Real State K{{out_num}}": "Фактическое состояние K{{out_num}}",
+                "Delays K{{out_num}}": "Задержки K{{out_num}}",
+                "Voltage Control K{{out_num}}": "Контроль напряжения K{{out_num}}",
                 "Output {{out_num}}": "Выход {{out_num}}",
                 "Output {{out_num}} Actions": "Действия для выхода {{out_num}}",
+                "Urms Normal K{{out_num}}": "Норма Urms L{{out_num}}",
+                "Blocking K{{out_num}}": "Блокировка/Задержка K{{out_num}}",
+                "Startup Delay Countdown K{{out_num}}": "Таймер задержки включения K{{out_num}}",
+                "Restart Delay Countdown K{{out_num}}": "Таймер задержки повторного включения K{{out_num}}",
                 {% endfor -%}
 
                 "Output Safe State": "Безопасное состояние выходов",
@@ -712,6 +904,23 @@
                 "Don't change": "Не блокировать",
                 "Disable in safety mode": "Блокировать в безопасном режиме",
                 "Enable only in safety mode": "Разрешить только в безопасном режиме",
+
+                "Voltage Protection Trip": "Блокировка по напряжению",
+                "Undervoltage Threshold (V)": "Нижний допустимый предел (В)",
+                "Overvoltage Threshold (V)": "Верхний допустимый предел (В)",
+                "Voltage Dip Duration (s)": "Допустимая длительность провала (с)",
+                "Startup Delay (s)": "Задержка включения (с)",
+                "Restart Delay (s)": "Задержка повторного включения (с)",
+                "Disable": "Не активна",
+                "Enable": "Активна",
+
+                "protective_functions_description": "Для использования защитных функций требуется прошивка версии 1.21.0 и выше",
+                "undervoltage_description": "120...220, заводское - 207",
+                "overvoltage_description": "230...277, заводское - 253",
+                "voltage_dip_duration_description": "0.5...10, заводское - 5",
+                "startup_delay_ctrl_dis_description": "0...999, заводское - 0",
+                "startup_delay_ctrl_en_description": "3...999, заводское - 10",
+                "restart_delay_description": "0...999, заводское - 0",
 
                 "Baud rate": "Скорость обмена",
                 "baud_rate_description": "Перед изменением параметра убедитесь, что связь с устройством установлена. Выберите нужную скорость обмена, сохраните конфигурацию, а затем укажите в настройках порта эту же скорость.",
