--- a/templates/config-map12e-fw2.json.jinja
+++ b/templates/config-map12e-fw2.json.jinja
@@ -91,6 +91,7 @@
                 "enum": [0, 1],
                 "default": 0,
                 "enum_titles": ["No", "Yes"],
+                "description": "Firmware v2.10.0 or newer is required",
                 "group": "channel{{ch_num}}_l1",
                 "order": 4
             },
@@ -133,6 +134,7 @@
                 "enum": [0, 1],
                 "default": 0,
                 "enum_titles": ["No", "Yes"],
+                "description": "Firmware v2.10.0 or newer is required",
                 "group": "channel{{ch_num}}_l2",
                 "order": 4
             },
@@ -175,6 +177,7 @@
                 "enum": [0, 1],
                 "default": 0,
                 "enum_titles": ["No", "Yes"],
+                "description": "Firmware v2.10.0 or newer is required",
                 "group": "channel{{ch_num}}_l3",
                 "order": 4
             },
@@ -911,7 +914,8 @@
                 "Uptime": "Время работы с момента включения (с)",
                 "MCU Temperature": "Температура МК",
                 "MCU Voltage": "Напряжение питания МК",
-                "Firmware v2.3.0 or newer is required": "Для прошивок v2.3.0 и новее"
+                "Firmware v2.3.0 or newer is required": "Для прошивок v2.3.0 и новее",
+                "Firmware v2.10.0 or newer is required": "Для прошивок v2.10.0 и новее"
             }
         }
     }
