change channel name

--- a/templates/config-wb-mao4-20ma.json.jinja
+++ b/templates/config-wb-mao4-20ma.json.jinja
@@ -579,7 +579,7 @@
                 "group": "gg_output_{{index + 1}}_channels"
             },
             {
-                "name": "Channel {{index + 1}} Fault",
+                "name": "Channel {{index + 1}} Open Circuit",
                 "reg_type": "discrete",
                 "address": {{16 + index}},
                 "type": "switch",
@@ -696,7 +696,7 @@
                 "Channel {{ch_number}}": "Канал {{ch_number}}",
                 "Channel {{ch_number}} Level": "Уровень канала {{ch_number}}",
                 "Channel {{ch_number}} Current": "Ток канала {{ch_number}}",
-                "Channel {{ch_number}} Fault": "Обрыв цепи канала {{ch_number}}",
+                "Channel {{ch_number}} Open Circuit": "Обрыв цепи канала {{ch_number}}",
                 "Channel {{ch_number}} Duty Cycle Raw": "Прямое задание скважности ШИМ на выходе {{ch_number}}",
                 {% endfor -%}
 
