--- a/templates/config-wb-mao4-20ma.json.jinja
+++ b/templates/config-wb-mao4-20ma.json.jinja
@@ -388,6 +388,18 @@
                 "group": "gg_output_{{ ch_number }}_rates"
             },
             {% endfor -%}
+            {
+                "id": "safety_timer_s",
+                "title": "Safety Poll Timeout (s)",
+                "group": "g_safety",
+                "description": "poll_timeout_description",
+                "address": 8,
+                "order": 2,
+                "reg_type": "holding",
+                "min": 1,
+                "max": 65534,
+                "default": 10
+            },
             {% for ch_number in range(1, OUTPUTS_NUMBER + 1) -%}
             {
                 "id": "safety_mode_ch_{{ch_number}}_action",
