--- a/templates/config-wb-mdm3.json.jinja
+++ b/templates/config-wb-mdm3.json.jinja
@@ -1,7 +1,6 @@
 {% set INPUTS_NUMBER = 6 -%}
 {% set OUTPUTS_NUMBER = 3 -%}
 {% set PRESS_TYPES = ["single", "long", "double", "shortlong"] -%}
-{% set LIGHT_SCENES_NUMBER = 8 -%}
 
 {
     "title": "WB-MDM3_template_title",
@@ -66,45 +65,6 @@
                     }
                 }
             },
-            {% endfor -%}
-            {% for ls_number in range(1, LIGHT_SCENES_NUMBER + 1) -%}
-            {
-                "title": "Light Scene {{ ls_number }}",
-                "id": "g_light_scene_{{ ls_number }}",
-                "description": "light_scenes_description"
-            },
-            {
-                "title": "Actions when Scene Light Turn On",
-                "id": "gg_ls_{{ ls_number }}_actions_turn_on",
-                "group": "g_light_scene_{{ ls_number }}"
-            },
-            {
-                "title": "Actions when Scene Light Turn Off",
-                "id": "gg_ls_{{ ls_number }}_actions_turn_off",
-                "group": "g_light_scene_{{ ls_number }}"
-            },
-            {
-                "title": "Light Scene {{ ls_number }} Channels",
-                "id": "gg_ls_{{ ls_number }}_channels",
-                "group": "g_light_scene_{{ ls_number }}",
-                "ui_options": {
-                    "wb": {
-                        "disable_title": true
-                    }
-                }
-            },
-            {% for ch_number in range(1, OUTPUTS_NUMBER + 1) -%}
-            {
-                "title": "Channel {{ ch_number }}",
-                "id": "gg_ls_{{ls_number}}_ch_{{ch_number}}_action_turn_on",
-                "group": "gg_ls_{{ ls_number }}_actions_turn_on"
-            },
-            {
-                "title": "Channel {{ ch_number }}",
-                "id": "gg_ls_{{ls_number}}_ch_{{ch_number}}_action_turn_off",
-                "group": "gg_ls_{{ ls_number }}_actions_turn_off"
-            },
-            {% endfor -%}
             {% endfor -%}
 
             {
@@ -208,18 +168,15 @@
             {
                 "id": "{{action_bind}}_number",
                 "title": "Output Number",
-                "address": {{768 + (loop.index0 * 16) + ch_number}},
+                "address": {{768 + ch_number}},
                 "reg_type": "holding",
-                "enum": [0, 1, 2, 3, 100, {%for ls in range(LIGHT_SCENES_NUMBER) %}{{32 + ls}}{% if not loop.last %}, {% endif %}{% endfor %}],
+                "enum": [0, 1, 2, 3, 100],
                 "enum_titles": [
                     "No Action",
                     "Output 1",
                     "Output 2",
                     "Output 3",
-                    "All Outputs",
-                    {% for ls_number in range(1, LIGHT_SCENES_NUMBER + 1) -%}
-                    "Light Scene {{ ls_number }}"{% if not loop.last %},{% endif %}
-                    {% endfor -%}
+                    "All Outputs"
                 ],
                 "default": 0,
                 "group": "input_{{ ch_number + 1 }}_{{ press_type | replace(' ', '_') }}_press_action",
@@ -229,7 +186,7 @@
             {
                 "id": "{{action_bind}}_action_single",
                 "title": "Action",
-                "address": {{832 + (loop.index0 * 16) + ch_number}},
+                "address": {{832 + ch_number}},
                 "reg_type": "holding",
                 {% if press_type in ["long", "shortlong"] %}"enum": [0, 1, 2, 3, 4, 5],{% else %}"enum": [0, 1, 2, 3, 4],{% endif %}
                 "enum_titles": [
@@ -248,7 +205,7 @@
             {
                 "id": "{{action_bind}}_action_all",
                 "title": "Action",
-                "address": {{832 + (loop.index0 * 16) + ch_number}},
+                "address": {{832 + ch_number}},
                 "reg_type": "holding",
                 "enum": [0, 1, 3, 4],
                 "enum_titles": [
@@ -262,38 +219,20 @@
                 "order": 2,
                 "condition": "{{action_bind}}_number==100"
             },
-            {
-                "id": "{{action_bind}}_action_scene",
-                "title": "Action",
-                "address": {{832 + (loop.index0 * 16) + ch_number}},
-                "reg_type": "holding",
-                "enum": [0, 1, 2],
-                "enum_titles": [
-                    "Turn Off Scene Light",
-                    "Turn On Scene Light",
-                    "Toggle Scene Light"
-                ],
-                "group": "input_{{ch_number + 1}}_{{press_type | replace(' ', '_') }}_press_action",
-                "order": 2,
-                "condition": "({{action_bind}}_number>=32)&&({{ action_bind }}_number<=39)"
-            },
             {% endfor -%}
             {% for sw_act in ["off", "on"] -%}
             {
                 "id": "input_{{ch_number + 1}}_switch_{{sw_act}}_channel",
                 "title": "Output Number",
-                "address": {{704 + (loop.index0 * 16) + ch_number}},
+                "address": {{704 + ch_number}},
                 "reg_type": "holding",
-                "enum": [0, 1, 2, 3, 100, {%for ls in range(LIGHT_SCENES_NUMBER) %}{{32 + ls}}{% if not loop.last %}, {% endif %}{% endfor %}],
+                "enum": [0, 1, 2, 3, 100],
                 "enum_titles": [
                     "No Action",
                     "Output 1",
                     "Output 2",
                     "Output 3",
-                    "All Outputs",
-                    {% for ls_number in range(1, LIGHT_SCENES_NUMBER + 1) -%}
-                    "Light Scene {{ ls_number }}"{% if not loop.last %},{% endif %}
-                    {% endfor -%}
+                    "All Outputs"
                 ],
                 "default": 0,
                 "group": "input_{{ ch_number + 1}}_switch_{{sw_act}}_action",
@@ -303,7 +242,7 @@
             {
                 "id": "input_{{ch_number + 1}}_switch_{{sw_act}}_action_single",
                 "title": "Action",
-                "address": {{736 + (loop.index0 * 16) + ch_number}},
+                "address": {{736 + ch_number}},
                 "reg_type": "holding",
                 "enum": [0, 1, 2],
                 "enum_titles": [
@@ -319,7 +258,7 @@
             {
                 "id": "input_{{ch_number + 1}}_switch_{{sw_act}}_action_all",
                 "title": "Action",
-                "address": {{736 + (loop.index0 * 16) + ch_number}},
+                "address": {{736 + ch_number}},
                 "reg_type": "holding",
                 "enum": [0, 1],
                 "enum_titles": [
@@ -331,117 +270,7 @@
                 "condition": "input_{{ch_number + 1}}_switch_{{sw_act}}_channel==100",
                 "order": 2
             },
-            {
-                "id": "input_{{ch_number + 1}}_switch_{{sw_act}}_action_scene",
-                "title": "Action",
-                "address": {{736 + (loop.index0 * 16) + ch_number}},
-                "reg_type": "holding",
-                "enum": [0, 1, 2],
-                "enum_titles": [
-                    "Turn Off Scene Light",
-                    "Turn On Scene Light",
-                    "Toggle Scene Light"
-                ],
-                "default": {{ 0 if sw_act == "off" else 1 }},
-                "group": "input_{{ ch_number + 1}}_switch_{{sw_act}}_action",
-                "condition": "input_{{ch_number + 1}}_switch_{{sw_act}}_channel>=32&&input_{{ch_number + 1}}_switch_{{sw_act}}_channel<=39",
-                "order": 2
-            },
             {% endfor -%}{% endfor -%}
-            {% for ls_number in range(1, LIGHT_SCENES_NUMBER + 1) -%}
-            {
-                "id": "ls_{{ls_number}}_light_on_off_condition",
-                "title": "Scene Light On/Off Condition",
-                "reg_type": "holding",
-                "address": {{1264 + (ls_number - 1)}},
-                "type": "enum",
-                "enum": [0, 1],
-                "enum_titles": [
-                    "Scene Light is on if any used channel is on. Otherwise light is off",
-                    "Scene Light is on if all used channels are on. Otherwise light is off"
-                ],
-                "group": "g_light_scene_{{ ls_number }}"
-            },
-            {% for ch_number in range(1, OUTPUTS_NUMBER + 1) -%}
-            {
-                "id": "ls_{{ls_number}}_ch_{{ch_number}}_action_off",
-                "title": "Action",
-                "reg_type": "holding",
-                "address": {{1280 + 0 + 64 * (ls_number - 1) + (ch_number - 1)}},
-                "type": "enum",
-                "enum": [0, 2, 3],
-                "enum_titles": [
-                    "Channel not Used in Scene",
-                    "Turn On",
-                    "Turn On and Set Brightness"
-                ],
-                "group": "gg_ls_{{ls_number}}_ch_{{ch_number}}_action_turn_on"
-            },
-            {
-                "id": "ls_{{ls_number}}_ch_{{ch_number}}_fading_off",
-                "title": "Dimming level rate (ms/%)",
-                "reg_type": "holding",
-                "address": {{1280 + 8 + 64 * (ls_number - 1) + (ch_number - 1)}},
-                "min": 0,
-                "max": 500,
-                "default": 20,
-                "required": true,
-                "group": "gg_ls_{{ls_number}}_ch_{{ch_number}}_action_turn_on",
-                "condition": "ls_{{ls_number}}_ch_{{ch_number}}_action_off>=1"
-            },
-            {
-                "id": "ls_{{ls_number}}_ch_{{ch_number}}_level_off",
-                "title": "Brightness (%)",
-                "reg_type": "holding",
-                "address": {{1280 + 16 + 64 * (ls_number - 1) + (ch_number - 1)}},
-                "min": 1,
-                "max": 100,
-                "default": 50,
-                "required": true,
-                "group": "gg_ls_{{ls_number}}_ch_{{ch_number}}_action_turn_on",
-                "condition": "ls_{{ls_number}}_ch_{{ch_number}}_action_off==3"
-            },
-            {
-                "id": "ls_{{ls_number}}_ch_{{ch_number}}_action_on",
-                "title": "Action",
-                "reg_type": "holding",
-                "address": {{1280 + 32 + 64 * (ls_number - 1) + (ch_number - 1)}},
-                "type": "enum",
-                "enum": [0, 1, 3],
-                "enum_titles": [
-                    "Channel not Used in Scene",
-                    "Turn Off",
-                    "Set Brightness"
-                ],
-                "group": "gg_ls_{{ls_number}}_ch_{{ch_number}}_action_turn_off"
-            },
-            {
-                "id": "ls_{{ls_number}}_ch_{{ch_number}}_fading_on",
-                "title": "Dimming level rate (ms/%)",
-                "reg_type": "holding",
-                "address": {{1280 + 40 + 64 * (ls_number - 1) + (ch_number - 1)}},
-                "min": 0,
-                "max": 500,
-                "default": 20,
-                "required": true,
-                "group": "gg_ls_{{ls_number}}_ch_{{ch_number}}_action_turn_off",
-                "condition": "ls_{{ls_number}}_ch_{{ch_number}}_action_on>=1"
-            },
-            {
-                "id": "ls_{{ls_number}}_ch_{{ch_number}}_level_on",
-                "title": "Brightness (%)",
-                "reg_type": "holding",
-                "address": {{1280 + 48 + 64 * (ls_number - 1) + (ch_number - 1)}},
-                "min": 1,
-                "max": 100,
-                "default": 50,
-                "required": true,
-                "group": "gg_ls_{{ls_number}}_ch_{{ch_number}}_action_turn_off",
-                "condition": "ls_{{ls_number}}_ch_{{ch_number}}_action_on==3"
-            },
-            {% endfor -%}
-            {% endfor -%}
-
             {
                 "id": "safety_timer_s",
                 "title": "Safety Poll Timeout (s)",
@@ -779,17 +608,6 @@
                 "group": "debug"
             },
             {% endfor -%}
-            {% for ls_number in range(1, LIGHT_SCENES_NUMBER + 1) -%}
-            {
-                "name": "Scene {{ls_number}} Light",
-                "reg_type": "coil",
-                "address": {{ 32 + (ls_number - 1) }},
-                "type": "switch",
-                "enabled": false,
-                "sporadic": true,
-                "group": "gg_ls_{{ls_number}}_channels"
-            },
-            {% endfor -%}
             {
                 "name": "Serial",
                 "type": "text",
@@ -919,25 +737,8 @@
                 "Action when Switch is On": "Действие в положении \"включено\"",
                 "Action when Switch is Off": "Действие в положении \"выключено\"",
 
-                "light_scenes_description": "Сцены позволяют объединить несколько каналов и устанавливать заранее определенный уровень яркости. Для сцены обязательно настраивать действия при включении и выключении. Доступно с версии прошивки 2.8.0",
-                "Scene Light On/Off Condition": "Условие включенного света сцены",
-                "Scene Light is on if any used channel is on. Otherwise light is off": "Свет сцены включен, если хотя бы один используемый канал включен. Иначе свет выключен",
-                "Scene Light is on if all used channels are on. Otherwise light is off": "Свет сцены включен, если все используемые каналы включены. Иначе свет выключен",
-                "Actions when Scene Light Turn On": "Действие при включении света сцены",
-                "Actions when Scene Light Turn Off": "Действие при выключении света сцены",
-                "Channel not Used in Scene": "Канал не используется в сцене",
                 "Turn On and Set Brightness": "Включить и установить яркость",
-                "Set Brightness": "Установить яркость",
-                "Dimming level rate (ms/%)": "Темп изменения уровня яркости (мс/%)",
                 "Brightness (%)": "Яркость (%)",
-                "Turn Off Scene Light": "Выключить свет сцены",
-                "Turn On Scene Light": "Включить свет сцены",
-                "Toggle Scene Light": "Переключить свет сцены",
-
-                {% for ls_number in range(1, LIGHT_SCENES_NUMBER + 1) -%}
-                "Light Scene {{ls_number}}": "Сцена {{ls_number}}",
-                "Scene {{ls_number}} Light": "Свет сцены {{ls_number}}",
-                {% endfor -%}
 
                 "LED lamp or incandescent lamp (logarithmic)": "лампа светодиодная или накаливания (логарифмическая кривая яркости)",
                 "resistive load (linear)": "резистивная нагрузка (линейная кривая яркости)",
