fix grammar, bump ver

--- a/templates/config-wb-mwac.json.jinja
+++ b/templates/config-wb-mwac.json.jinja
@@ -470,7 +470,7 @@
                 "Counters": "Счетчики",
 
                 "Cleaning Mode": "Режим \"Влажная уборка\"",
-                "wet_cleaning_mode_description": "В режиме \"Влажная уборка\" модуль не реагирует на датчики протечки. Режим доступен начиная с прошивки версии 1.21.0",
+                "wet_cleaning_mode_description": "В режиме \"Влажная уборка\" модуль не реагирует на датчики протечки. Режим доступен, начиная с прошивки версии 1.21.0",
                 "wet_cleaning_mode_timer_description": "1 — 360 мин",
                 "\"Wet cleaning\" mode timer (min)": "Таймер режима \"Влажная уборка\" (мин)",
 
@@ -518,7 +518,7 @@
                 "Safety Timer (s)": "Таймаут безопасного режима (с)",
                 "safety_mode_description": "При потере связи по RS-485 модуль защиты от протечек будет работать автономно. Однако есть возможность задать определенное состояние выходов и режима \"Протечка\" в случае обрыва связи. Для этого существует безопасный режим.",
                 "outputs_safe_state_description": "Состояние для безопасного режима и настройки \"Состояния реле при подаче питания\". По умолчанию безопасный режим отключен, а настройки безопасных состояний установлены в \"Выключен\".",
-                "mapping_matrix_actions_description": "Назначение действия для режима \"Влажная уборка\" доступно начиная с прошивки версии 1.21.0",
+                "mapping_matrix_actions_description": "Назначение действия для режима \"Влажная уборка\" доступно, начиная с прошивки версии 1.21.0",
                 "poll_timeout_description": "Параметр определяет время отсутствия опроса в секундах, после которого будет активирован безопасный режим. 1 — 65534 с, 10 по умолчанию.",
                 "safety_behaviour_description": "Безопасное состояние настраивается на вкладке \"Выходы\".",
                 "Don't сhange state": "Ничего не делать",
