--- a/templates/config-wb-mwac.json.jinja
+++ b/templates/config-wb-mwac.json.jinja
@@ -38,6 +38,7 @@
             {
                 "title": "Actions when the input is closed / opened",
                 "id": "gg_in{{ in_num }}_mapping_matrix_actions",
+                "description": "mapping_matrix_actions_description",
                 "group": "input_f{{ in_num }}"
             },
             {
@@ -453,11 +454,12 @@
                 "safety_mode_description": "When RS-485 connection is lost, the flood protection module will work autonomously. However, it is possible to set a certain state of the outputs and \"Leak\" mode in case of connection loss. For this purpose, there is a safety mode.",
                 "safety_behaviour_description": "Safe state is configured on \"Outputs\" tab.",
                 "outputs_safe_state_description": "State for safe mode and \"Relays State After Power On\" settings. By default, safe mode is disabled and safe states are set to \"Off\".",
+                "mapping_matrix_actions_description": "Assignment of action for \"Wet cleaning\" mode is available starting from firmware version 1.21.0",
                 "poll_timeout_description": "Parameter defines the time of absence of polling in seconds, after which safety mode will be activated. 1 - 65534 ms, 10 by default.",
                 "relays_state_after_poweron_description": "Default - \"Switch to safety state\"",
 
                 "Cleaning Mode": "\"Wet cleaning\" Mode",
-                "wet_cleaning_mode_description": "In the \"Wet cleaning\" mode, the module does not respond to leakage sensors.",
+                "wet_cleaning_mode_description": "In the \"Wet cleaning\" mode, the module does not respond to leakage sensors. The mode is available starting from firmware version 1.21.0",
                 "wet_cleaning_mode_timer_description": "1 - 360 min"
             },
             "ru": {
@@ -468,7 +470,7 @@
                 "Counters": "Счетчики",
 
                 "Cleaning Mode": "Режим \"Влажная уборка\"",
-                "wet_cleaning_mode_description": "В режиме \"Влажная уборка\" модуль не реагирует на датчики протечки.",
+                "wet_cleaning_mode_description": "В режиме \"Влажная уборка\" модуль не реагирует на датчики протечки. Режим доступен, начиная с прошивки версии 1.21.0",
                 "wet_cleaning_mode_timer_description": "1 — 360 мин",
                 "\"Wet cleaning\" mode timer (min)": "Таймер режима \"Влажная уборка\" (мин)",
 
@@ -516,6 +518,7 @@
                 "Safety Timer (s)": "Таймаут безопасного режима (с)",
                 "safety_mode_description": "При потере связи по RS-485 модуль защиты от протечек будет работать автономно. Однако есть возможность задать определенное состояние выходов и режима \"Протечка\" в случае обрыва связи. Для этого существует безопасный режим.",
                 "outputs_safe_state_description": "Состояние для безопасного режима и настройки \"Состояния реле при подаче питания\". По умолчанию безопасный режим отключен, а настройки безопасных состояний установлены в \"Выключен\".",
+                "mapping_matrix_actions_description": "Назначение действия для режима \"Влажная уборка\" доступно, начиная с прошивки версии 1.21.0",
                 "poll_timeout_description": "Параметр определяет время отсутствия опроса в секундах, после которого будет активирован безопасный режим. 1 — 65534 с, 10 по умолчанию.",
                 "safety_behaviour_description": "Безопасное состояние настраивается на вкладке \"Выходы\".",
                 "Don't сhange state": "Ничего не делать",
@@ -548,9 +551,7 @@
                 "toggle / reset": "переключить / выключить",
                 "toggle / set": "переключить / включить",
                 "toggle / toggle": "переключить / переключить",
-                "Actions when the input is closed / opened": "Действия при замыкании / размыкании входа",
-
-                "Actions for \"Wet cleaning\" mode": "Действия для режима \"Влажная уборка\""
+                "Actions when the input is closed / opened": "Действия при замыкании / размыкании входа"
             }
         }
     }
