--- a/templates/config-ensystec.json.jinja
+++ b/templates/config-ensystec.json.jinja
@@ -29,55 +29,6 @@
             }
         ],
         "parameters": {
-            {% for zon_num in range(0, ZONE_NUMBER) -%}
-            "input{{1 + zon_num }}_enable": {
-                "title": "Enable Input",
-                "address": "{{10 + zon_num//4}}:{{0 + 4*(( zon_num ) % 4)}}:1",
-                "reg_type": "holding",
-                "group": "input{{1 + zon_num}}",
-                "order": 1,
-                "readonly": true,
-                "enum": [0, 1],
-                "default": 1,
-                "enum_titles": [
-                    "None",
-                    "Enable"
-                ]
-            },
-            "input{{1 + zon_num }}_type": {
-                "title": "Type",
-                "address": "{{10 + zon_num//4}}:{{1 + 4*(( zon_num ) % 4)}}:1",
-                "reg_type": "holding",
-                "group": "input{{1 + zon_num}}",
-                "order": 2,
-                "required": true,
-                "readonly": true,
-                "enum": [0, 1],
-                "default": 1,
-                "enum_titles": [
-                    "Water Counter",
-                    "Leakage Sensor"
-                ],
-                "condition": "input{{1 + zon_num }}_enable==1"
-            },
-            "input{{1 + zon_num }}_open_circuit": {
-                "title": "Open Circuit",
-                "description": "open_circuit_description",
-                "address": "{{10 + zon_num//4}}:{{2 + 4*(( zon_num ) % 4)}}:1",
-                "reg_type": "holding",
-                "group": "input{{1 + zon_num}}",
-                "order": 3,
-                "required": true,
-                "readonly": true,
-                "enum": [0, 1],
-                "default": 1,
-                "enum_titles": [
-                    "Enable",
-                    "None"
-                ],
-                "condition": "input{{1 + zon_num }}_type==1"
-            },
-            {% endfor -%}
             "address": {
                 "title": "Address",
                 "description": "address_description",
@@ -152,7 +103,6 @@
                 "enabled": true
             },
             {% for zon_num in range(0, ZONE_NUMBER) -%}
-            {% set enabled = 'true' if True else 'false' -%}
             {
                 "name": "input_{{1 + zon_num}}",
                 "reg_type": "holding",
@@ -162,8 +112,7 @@
                 "on_value": 0,
                 "off_value": 1,
                 "group": "input{{1 + zon_num}}",
-                "condition": "(input{{1 + zon_num }}_enable==1)&&(input{{1 + zon_num }}_type==1)",
-                "enabled": {{enabled}}
+                "enabled": true
             },
             {
                 "name": "input_{{1 + zon_num}}_counter",
@@ -173,8 +122,7 @@
                 "type": "value",
                 "format": "s32",
                 "group": "input{{1 + zon_num}}",
-                "condition": "(input{{1 + zon_num }}_enable==1)&&(input{{1 + zon_num }}_type==0)",
-                "enabled": {{enabled}}
+                "enabled": false
             },
             {
                 "name": "input_{{1 + zon_num}}_open_circuit",
@@ -185,8 +133,7 @@
                 "on_value": 0,
                 "off_value": 1,
                 "group": "input{{1 + zon_num}}",
-                "condition": "(input{{1 + zon_num }}_enable==1)&&(input{{1 + zon_num }}_type==1)&&(input{{1 + zon_num }}_open_circuit==0)",
-                "enabled": {{enabled}}
+                "enabled": false
             },
             {% endfor -%}
 
@@ -277,7 +224,6 @@
         "translations": {
             "en": {
                 "template_title": "Ensystec Leak Protect",
-                "open_circuit_description": "Can only be activated for the “Leak Sensor Plus” sensor",
                 "address_description": "Make sure that communication with device is established before changing this parameter. Select required address, save configuration and then change device address to the same value",
                 "baud_rate_description": "Make sure that communication with device is established before changing this parameter. Select required baud rate, save configuration and then change port baud rate to the same value",
                 {% for zon_num in range(0, ZONE_NUMBER) -%}
@@ -292,8 +238,6 @@
                 {% endfor -%}
                 "external_power_220_ac": "External Power 220 AC",
                 "low_battery_voltage": "Low Battery Voltage",
-                "leakage_sensor": "Leakage Sensor",
-                "failure_sensor": "Failure Sensor",
                 "external_led_control": "External LED Control",
                 {% for zon_num in range(0, ZONE_NUMBER) -%}
                 "led_{{1 + zon_num}}": "LED {{1 + zon_num}}",
@@ -309,14 +253,6 @@
                 "Outputs": "Выходы",
                 "General": "Общее",
                 "HW Info": "Данные модуля",
-                "Enable Input": "Включить вход",
-                "Type": "Тип входа",
-                "Open Circuit": "Контроль обрыва цепи",
-                "open_circuit_description": "Может быть активирован только для датчика «Leak Sensor Plus»",
-                "None": "Выключен",
-                "Enable": "Включен",
-                "Water Counter": "Счетчик воды",
-                "Leakage Sensor": "Датчик протечки",
                 {% for zon_num in range(0, ZONE_NUMBER) -%}
                 "input_{{1 + zon_num}}": "Вход {{1 + zon_num}}",
                 "input_{{1 + zon_num}}_counter": "Счетчик {{1 + zon_num}}",
@@ -341,9 +277,6 @@
                 "115200 bps": "115200 бит/с",
                 "address_description": "Перед изменением параметра убедитесь, что связь с устройством установлена. Выберите нужный адрес, сохраните конфигурацию, а затем укажите в настройках устройства этот же адрес",
                 "baud_rate_description": "Перед изменением параметра убедитесь, что связь с устройством установлена. Выберите нужную скорость обмена, сохраните конфигурацию, а затем укажите в настройках порта эту же скорость",
-                "Inputs 1-4": "Входы 1-4",
-                "Inputs 5-8": "Входы 5-8",
-                "Inputs 9-10": "Входы 9-10",
                 "external_power_220_ac": "Внешнее питание 220 В",
                 "low_battery_voltage": "Низкий уровень заряда",
                 "leakage_sensor": "Протечка",
