del unused parameters
Update config-ensystec.json.jinja

--- a/templates/config-ensystec.json.jinja
+++ b/templates/config-ensystec.json.jinja
@@ -238,6 +238,8 @@
                 {% endfor -%}
                 "external_power_220_ac": "External Power 220 AC",
                 "low_battery_voltage": "Low Battery Voltage",
+                "leakage_sensor": "Leakage Sensor",
+                "failure_sensor": "Failure Sensor",
                 "external_led_control": "External LED Control",
                 {% for zon_num in range(0, ZONE_NUMBER) -%}
                 "led_{{1 + zon_num}}": "LED {{1 + zon_num}}",
