add required: true in switch mode

--- a/templates/config-wb-mdm3.json.jinja
+++ b/templates/config-wb-mdm3.json.jinja
@@ -369,6 +369,7 @@
                     "Button",
                     "Switch"
                 ],
+                "required": true,
                 "default": 0,
                 "condition": "isDefined({{selected_mode}})==0||{{selected_mode}}==3",
                 "group": "input_{{ch_number + 1}}"
