change device_type and update deprecated

--- a/templates/config-wb-mdm3.json.jinja
+++ b/templates/config-wb-mdm3.json.jinja
@@ -4,7 +4,7 @@
 
 {
     "title": "WB-MDM3_template_title",
-    "device_type": "WB-MDM3",
+    "device_type": "tpl1_wb_mdm3",
     "group": "g-wb",
     "hw": [
         {
